src/widgets/CurrentWeather/ui/MainWeaterCard/MainWeatherCard.css
.weather-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: var(--color-bg-weather-card);
  border: 1px solid var(--color-border-weather-card);
  border-radius: 16px;
  padding: 24px;
  flex: 1;
  gap: 16px;
}

.weather-card__city {
  font-weight: 700;
  font-size: 24px;
  line-height: 1.16667;
}

.weather-card__date {
  margin-top: 8px;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: var(--color-text-secondary);
}

.weather-card__temp-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 12px;
}

.weather-card__temp-cards {
  display: flex;
  justify-content: space-between;
  gap: 28px;
  margin-top: 30px;
}

.weather-card__temp-row {
  display: flex;
  align-items: center;
  margin-right: 30px;
}

.weather-card__temp {
  margin-right: 30px;
  align-self: center;
  font-weight: 700;
  font-size: 72px;
}

.weather-card__feels-like {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
}

.weather-card__feels-like-label {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.2;
  color: var(--color-text-secondary);
}

.weather-card__feels-like-temp {
  font-weight: 700;
  font-size: 24px;
  line-height: 1.1;
}

.weather-card__icon-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 110px;
  width: 110px;
  height: 110px;
  flex-shrink: 0;
  background-color: var(--color-bg-card);
}

.weather-card__description {
  font-weight: 700;
  font-size: 24px;
  line-height: 1.16667;
}

@media (max-width: 768px) {
  .weather-card {
    padding: 12px;
  }

  .weather-card__temp-container {
    flex-wrap: wrap;
  }
}

@media (max-width: 599px) {
  .weather-card__temp-row {
    flex-basis: 100%;
  }

  .weather-card__temp-cards {
    gap: 10px;
  }
}

@media (max-width: 364px) {
  .weather-card {
    padding: 16px;
  }

  .weather-card__temp {
    font-size: 52px;
    margin-right: 20px;
  }

  .weather-card__city {
    font-size: 20px;
  }

  .weather-card__description {
    font-size: 18px;
  }

  .weather-card__feels-like-temp {
    font-size: 20px;
  }

  .weather-card__icon-wrap {
    width: 88px;
    height: 88px;
    border-radius: 88px;
  }

  .weather-card__temp-cards {
    gap: 8px;
  }
}

